--- a/Code Review 1/index.html
+++ b/Code Review 1/index.html
@@ -2,53 +2,50 @@
 <html>
 
 <head>
-    <title></title>
+    <title>CF Blog Index</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <header>
-    	<div class="hero-image"> <img src="img/codefactory-vienna-logo.png" alt="CF Logo picture">
-  <div class="hero-text">
-  <h3>Martina Blauensteiner - I am a future full stack web developer </h3>
-  </div>
-</div>
+        <div class="hero-image"> <img src="img/codefactory-vienna-logo.png" alt="CF Logo picture">
+            <div class="hero-text">
+                <h3>Martina Blauensteiner - I am a future full stack web developer </h3>
+            </div>
+        </div>
         <div class="header">
     </header>
     <!-- /header -->
     <div class="navigation">
         <ul>
-            <li><a href="#" style="text-decoration: none;" title="Home">HOME</a></li>
-            <li><a href="" style="text-decoration: none;" title="About Me">ABOUT ME</a></li>
-            <li><a href="" style="text-decoration: none;" title="Blog">BLOG</a></li>
-            <li><a href="" style="text-decoration: none;" title="Contact">CONTACT</a></li>
+            <li><a href="Home.html" style="text-decoration: none;" title="Home">HOME</a></li>
+            <li><a href="About.html" style="text-decoration: none;" title="About Me">ABOUT ME</a></li>
+            <li><a href="Blog.html" style="text-decoration: none;" title="Blog">BLOG</a></li>
+            <li><a href="contact.html" style="text-decoration: none;" title="Contact">CONTACT</a></li>
         </ul>
     </div>
     <div class="text">
         <h4>This is my first 
     website :) </h4></div>
     <div class="latest">Latest Blog Posts</div>
-
-<div class="container">
-  <div class="grid">
-    <div class="cell"> <img src="img/Debit_card_ATM.jpg" alt="Debit Card picture" class="responsive-image">
-  </div>
-<div class="cell">
-  <img src="img/Devices.jpg" alt="Devices" class="responsive-image">
-</div>
-<div class="cell"> <img src="img/Phone.png" alt="Phone" class="responsive-image">
-</div>
-<div class="cell"> <img src="img/Taxify-Scooters.jpg" alt="Scooters" class="responsive-image">
-</div> </div> </div>
-
-    
-
+    <div class="container">
+        <div class="grid">
+            <div class="cell"> <img src="img/Debit_card_ATM.jpg" alt="Debit Card picture" class="responsive-image">
+            </div>
+            <div class="cell">
+                <img src="img/Devices.jpg" alt="Devices" class="responsive-image">
+            </div>
+            <div class="cell"> <img src="img/Phone.png" alt="Phone" class="responsive-image">
+            </div>
+            <div class="cell"> <img src="img/Taxify-Scooters.jpg" alt="Scooters" class="responsive-image">
+            </div>
+        </div>
+    </div>
     <hr>
-
     <footer>
-    	<img src="img/codefactory-vienna-logo.png" alt="CF Logo picture" class="center" >
-    	<p class="footer"> Martina Blauensteiner - Code Factory 2018  </p>
+        <img src="img/codefactory-vienna-logo.png" alt="CF Logo picture" class="center">
+        <p class="footer"> Martina Blauensteiner - Code Factory 2018 </p>
     </footer>
 </body>
 
