--- a/Code Review 1/index.html
+++ b/Code Review 1/index.html
@@ -31,14 +31,19 @@
     <div class="latest">Latest Blog Posts</div>
     <div class="container">
         <div class="grid">
-            <div class="cell"> <img src="img/Debit_card_ATM.jpg" alt="Debit Card picture" class="responsive-image">
+            <div class="cell"> 
+            	<img src="img/Debit_card_ATM.jpg" alt="Debit Card picture" class="responsive-image"> 
+            	<p> European banking app Monese scores $60M Series B led by Kinnevik</p>
             </div>
             <div class="cell">
                 <img src="img/Devices.jpg" alt="Devices" class="responsive-image">
+                <p>Livongo Health expands under new offering with Abbott Labs</p>
             </div>
-            <div class="cell"> <img src="img/Phone.png" alt="Phone" class="responsive-image">
+            <div class="cell"> <img src="img/Phone.png" alt="Phone" class="responsive-image"> 
+            	<p>Location marketing platform Uberall raises further $25M and acquires competitor Navads</p>
             </div>
-            <div class="cell"> <img src="img/Taxify-Scooters.jpg" alt="Scooters" class="responsive-image">
+            <div class="cell"> <img src="img/Taxify-Scooters.jpg" alt="Scooters" class="responsive-image"> 
+            	<p>Taxify is entering the e-scooter game</p>
             </div>
         </div>
     </div>
