--- a/Code Review 1/index.html
+++ b/Code Review 1/index.html
@@ -50,7 +50,7 @@
     <hr>
     <footer>
         <img src="img/codefactory-vienna-logo.png" alt="CF Logo picture" class="center">
-        <p class="footer"> Martina Blauensteiner - Code Factory 2018 </p>
+        <p class="footer"> <center> Martina Blauensteiner - Code Factory 2018 </center>  </p>
     </footer>
 </body>
 
